--- a/Christian_Oliveira_LISTA_01/src/questao01/Exercicio.html
+++ b/Christian_Oliveira_LISTA_01/src/questao01/Exercicio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>questao01</title>
-    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1>IPII - Questão 01 - Lista 01</h1>
